--- a/web1/src/app/report/customer-report/customer-report.component.html
+++ b/web1/src/app/report/customer-report/customer-report.component.html
@@ -1,151 +1,245 @@
 <section class="content">
-    <div class="container-fluid">
-      <div class="block-header">
-        <div class="row clearfix">
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-0">
-            <div class="card p-0">
-              <div class="header p-2 py-0 pt-1">
-                <div class="row">
-                  <div class="col-md-4 col-8 p-0 ms-3">
-                    <h2>Customer Report </h2>
-                  </div>
-                 
+  <div class="container-fluid">
+    <div class="block-header">
+      <div class="row clearfix">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-0">
+          <div class="card p-0">
+            <div class="header p-2 py-0 pt-1">
+              <div class="row">
+                <div class="col-md-4 col-8 p-0 ms-3">
+                  <h2>Customer Report </h2>
                 </div>
+
               </div>
-              <mat-tab-group>
-                <!-- customer  -->
-                 <!-- customer with power -->
-                 <mat-tab  label="Customer With Power Report">
-                  <div class="body">
-                      <form class="p-3 pb-0" #f1="ngForm" >
-                          <div class="row">
-                              <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
-                                  <mat-form-field class="example-full-width mb-0">
-                                      <mat-label>Select Types</mat-label>
-                                      <mat-select name="Type" [(ngModel)]="Type">
-                                          <mat-option value="Customer">Customer</mat-option>
-                                          <mat-option value="spectacle_rx">Spectacle_Rx</mat-option>
-                                          <mat-option value="contact_lens_rx">Contact_Lens_Rx</mat-option>
-                                          <mat-option value="other_rx">Other_Rx</mat-option>
-                                      </mat-select>
-                                  </mat-form-field>
-                              </div>
-                              <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
-                                 <button type="button" mat-raised-button  (click)="exportCustomerPower()" style="    background-color: #458f48; color:#fff">
-                                    Excel <i class="fa fa-file-excel-o excel1"  aria-hidden="true" > </i>
-                                 </button>
-                              </div>
-                              </div>
-                      </form>
-                      <!-- customer with power list -->
-                      <div class="body p-2">
-                        <div id="customerPower-content" class="col-sm-12" style="overflow: auto; height: 450px;">
-                          <table class="table table-striped table-hover table-sm table-bordered"
-                            style="border: 2px solid #fff !important;" id="customerPowerExcel">
-                            <thead>
-                            
-                            </thead>
-                            <tbody class="text-center">
-                           
-                            </tbody>
-                          </table>
-                        </div>
+            </div>
+            <mat-tab-group>
+              <!-- customer  -->
+              <!-- customer with power -->
+              <mat-tab label="Customer With Power Report">
+                <div class="body">
+                  <form class="p-3 pb-0" #f1="ngForm">
+                    <div class="row">
+                      <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
+                        <mat-form-field class="example-full-width mb-0">
+                          <mat-label>Select Types</mat-label>
+                          <mat-select name="Type" [(ngModel)]="Type">
+                            <mat-option value="Customer">Customer</mat-option>
+                            <mat-option value="spectacle_rx">Spectacle_Rx</mat-option>
+                            <mat-option value="contact_lens_rx">Contact_Lens_Rx</mat-option>
+                            <mat-option value="other_rx">Other_Rx</mat-option>
+                          </mat-select>
+                        </mat-form-field>
+                      </div>
+                      <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
+                        <button type="button" mat-raised-button (click)="exportCustomerPower()"
+                          style="    background-color: #458f48; color:#fff">
+                          Excel <i class="fa fa-file-excel-o excel1" aria-hidden="true"> </i>
+                        </button>
                       </div>
                     </div>
+                  </form>
+                  <!-- customer with power list -->
+                  <div class="body p-2">
+                    <div id="customerPower-content" class="col-sm-12" style="overflow: auto; height: 450px;">
+                      <table class="table table-striped table-hover table-sm table-bordered"
+                        style="border: 2px solid #fff !important;" id="customerPowerExcel">
+                        <thead>
+
+                        </thead>
+                        <tbody class="text-center">
+
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                </div>
               </mat-tab>
-                <mat-tab  label="Customer Report" >
-                  <div class="body">
-                    <form class="p-3 pb-0" #f="ngForm" >
-                         
-                    </form>
-                    <!-- customer list -->
-                    <div class="body p-2">
+              <mat-tab label="Customer Report">
+                <div class="body">
+                  <form class="p-3 pb-0" #f="ngForm">
+
+                  </form>
+                  <!-- customer list -->
+                  <div class="body p-2">
+                    <div id="customer-content" class="col-sm-12" style="overflow: auto; height: 450px;">
+                      <table class="table table-striped table-hover table-sm table-bordered"
+                        style="border: 2px solid #fff !important;" id="customerExcel">
+                        <thead>
+                          <tr>
+                            <th>SNo. </th>
+                            <th>VisitDate </th>
+                            <th>MRDNO</th>
+                            <th>Cust_ID </th>
+                            <th>Name </th>
+                            <th>MobileNo1 </th>
+                            <th>MobileNo2 </th>
+                            <th>Age </th>
+                            <th>Gender </th>
+                            <th>Address </th>
+                            <th>Remarks </th>
+                            <th>Category </th>
+                            <th>Anniversary </th>
+                            <th>DOB </th>
+                            <th>Email </th>
+                            <th>PhoneNo </th>
+                            <th>RefferedByDoc </th>
+                            <th>ReferenceType </th>
+                            <th>GSTNo </th>
+                            <th>Other </th>
+
+                          </tr>
+                          <tr>
+                            <th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                          </tr>
+                        </thead>
+                        <tbody class="text-center">
+                          <tr *ngFor="let data of dataList; let i = index">
+                            <td>{{ i + 1 }} </td>
+                            <td>{{data.VisitDate}} </td>
+                            <td>{{data.MRDNO}} </td>
+                            <td>{{data.Sno}} </td>
+                            <td>{{data.Name}} </td>
+                            <td>{{data.MobileNo1}} </td>
+                            <td>{{data.MobileNo2}} </td>
+                            <td>{{data.Age}} </td>
+                            <td>{{data.Gender}} </td>
+                            <td>{{data.Address}} </td>
+                            <td>{{data.Remarks}} </td>
+                            <td>{{data.Category}} </td>
+                            <td>{{data.Anniversary}} </td>
+                            <td>{{data.DOB}} </td>
+                            <td>{{data.Email}} </td>
+                            <td>{{data.PhoneNo}} </td>
+                            <td>{{data.RefferedByDoc}} </td>
+                            <td>{{data.ReferenceType}} </td>
+                            <td>{{data.GSTNo}} </td>
+                            <td>{{data.Other}} </td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                </div>
+              </mat-tab>
+              <mat-tab label="Member Card Report">
+                <div class="body">
+                  <form class="p-3 pb-0" #f="ngForm" (ngSubmit)="searchDataMember()">
+                    <div class="row">
+                      <div  class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
+                        <mat-form-field class="example-full-width mb-0">
+                             <mat-label>Type</mat-label>
+                                 <mat-select name="Type" [(ngModel)]="data.Type" required>
+                                       <mat-option [value]="0">All</mat-option>
+                                       <mat-option value="Issue">Issue</mat-option>
+                                       <mat-option value="Active">Active</mat-option>
+                                       <mat-option value="Deactive">Deactive</mat-option>
+                                 </mat-select>
+                                 <mat-error>
+                                         Type is required
+                                   </mat-error>
+                               </mat-form-field>
+                             </div>
+                      <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0 ">
+                        <mat-form-field class="example-full-width mb-0">
+                          <mat-label>From</mat-label>
+                          <input matInput name="FromDate" type="date" [(ngModel)]="data.FromDate" #DOBcontrol />
+                        </mat-form-field>
+                      </div>
+                      <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0 ">
+                        <mat-form-field class="example-full-width mb-0">
+                          <mat-label>To</mat-label>
+                          <input matInput type="date" name="ToDate" [(ngModel)]="data.ToDate" />
+                        </mat-form-field>
+                      </div>
+                      <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
+                        <mat-form-field class="example-full-width mb-0" *ngIf="user.UserGroup === 'CompanyAdmin'">
+                          <mat-label>ShopName</mat-label>
+                          <mat-select name="ShopID" [(ngModel)]="data.ShopID">
+                            <mat-option [value]="0">All</mat-option>
+                            <mat-option [value]="Ts.ID" *ngFor="let Ts of shopList"> {{Ts.Name}}
+                              <span [style.color]="'blue'" *ngIf="Ts.AreaName !== 'null'">({{Ts.AreaName}})</span>
+                            </mat-option>
+                          </mat-select>
+                        </mat-form-field>
+                        <mat-form-field class="example-full-width mb-0" *ngIf="user.UserGroup !== 'CompanyAdmin'">
+                          <mat-label>ShopName</mat-label>
+                          <mat-select name="ShopID" [(ngModel)]="data.ShopID">
+                            <mat-option [value]="Ts.ID" *ngFor="let Ts of shopList"> {{Ts.Name}}
+                              <span [style.color]="'blue'" *ngIf="Ts.AreaName !== 'null'">({{Ts.AreaName}})</span>
+                            </mat-option>
+                          </mat-select>
+                        </mat-form-field>
+                      </div>
+                    
+                      <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
+                        <button [disabled]="!f1.valid" class="me-2" type="submit" mat-raised-button color="primary">
+                          Search
+                        </button>
+                        <button type="button" mat-raised-button color="warn" (click)="FromReset()">
+                          Reset
+                        </button>
+
+                      </div>
+                    </div>
+                  </form>
+
+                  <div class="body p-2">
+                    <div class="row">
                       <div id="customer-content" class="col-sm-12" style="overflow: auto; height: 450px;">
                         <table class="table table-striped table-hover table-sm table-bordered"
-                          style="border: 2px solid #fff !important;" id="customerExcel">
+                          style="border: 2px solid #fff !important;" id="member">
                           <thead>
                             <tr>
-                                <th>SNo. </th>
-                                <th>VisitDate </th>
-                                <th>MRDNO</th>
-                                <th>Cust_ID </th>
-                                <th>Name </th>
-                                <th>MobileNo1 </th>
-                                <th>MobileNo2 </th>
-                                <th>Age </th>
-                                <th>Gender </th>          
-                                <th>Address </th>
-                                <th>Remarks </th>
-                                <th>Category </th>
-                                <th>Anniversary </th>
-                                <th>DOB </th>
-                                <th>Email </th>
-                                <th>PhoneNo </th>
-                                <th>RefferedByDoc </th>
-                                <th>ReferenceType </th>
-                                <th>GSTNo </th>
-                                <th>Other </th>
-                                
+                              <th>SNo. </th>
+                              <th>CustomerName </th>
+                              <th>IssueDate </th>
+                              <th>ExpiryDate </th>
                             </tr>
                             <tr>
-                                <th>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
+                              <th> <i class="fa fa-file-excel-o excel" title="ExportAsXLSX"
+                                aria-hidden="true" type="button" (click)="exportEx()"> </i></th>
+                              <th></th>
+                              <th></th>
+                              <th></th>
                             </tr>
                           </thead>
                           <tbody class="text-center">
-                            <tr *ngFor="let data of dataList; let i = index">
-                                    <td>{{ i + 1 }} </td>
-                                    <td>{{data.VisitDate}} </td>
-                                    <td>{{data.MRDNO}} </td>
-                                    <td>{{data.Sno}} </td>
-                                    <td>{{data.Name}} </td>
-                                    <td>{{data.MobileNo1}} </td>
-                                    <td>{{data.MobileNo2}} </td>
-                                    <td>{{data.Age}} </td>
-                                    <td>{{data.Gender}} </td>
-                                    <td>{{data.Address}} </td>
-                                    <td>{{data.Remarks}} </td>
-                                    <td>{{data.Category}} </td>
-                                    <td>{{data.Anniversary}} </td>
-                                    <td>{{data.DOB}} </td>
-                                    <td>{{data.Email}} </td>
-                                    <td>{{data.PhoneNo}} </td>
-                                    <td>{{data.RefferedByDoc}} </td>
-                                    <td>{{data.ReferenceType}} </td>
-                                    <td>{{data.GSTNo}} </td>
-                                    <td>{{data.Other}} </td>
+                            <tr *ngFor="let data of memberList; let i = index">
+                              <td>{{ i + 1 }} </td>
+                              <td>{{ data.CustomerName }} </td>
+                              <td>{{ dateFormat(data.IssueDate) }} </td>
+                              <td>{{ dateFormat(data.ExpiryDate) }} </td>
                             </tr>
                           </tbody>
                         </table>
                       </div>
                     </div>
                   </div>
-                </mat-tab>
-               
-              </mat-tab-group>
-            </div>
+                </div>
+              </mat-tab>
+            </mat-tab-group>
           </div>
         </div>
       </div>
     </div>
+  </div>
 </section>
-  
-
