--- a/web1/src/app/admin/login-history/login-history.component.html
+++ b/web1/src/app/admin/login-history/login-history.component.html
@@ -57,7 +57,7 @@
                                             <td class="text-left">{{data.UserName}}</td>
                                             <td class="text-left">{{data.CompanyName}}</td>
                                             <td class="text-left">{{data.IpAddress}}</td>
-                                            <td class="text-left">{{data.LoginTime}}</td>
+                                            <td class="text-left">{{data.LoginTime | date: 'dd-MM-yyyy hh:mm a'}}</td>
                                             <td class="text-left">{{data.Comment }}</td>
                                         </tr>
                                     </tbody>
