--- a/web1/src/app/admin/company-setting/company-setting.component.html
+++ b/web1/src/app/admin/company-setting/company-setting.component.html
@@ -248,6 +248,12 @@
                                                             [(ngModel)]="data.SupplierShopWise" class="example-margin">SupplierShopWise
                                                         </mat-slide-toggle>
                                                     </div>
+                                                    <div class="col-xl-1 col-lg-1"
+                                                        style="padding:0; padding-left: 21px;">
+                                                        <mat-slide-toggle name="IsReminder" color="primary" #Remindercontrol
+                                                            [(ngModel)]="data.IsReminder" class="example-margin">Reminder
+                                                        </mat-slide-toggle>
+                                                    </div>
 
                                                     <div class="col-md-12  header mt-md-4">
                                                         <h2>Barcode Select</h2>
