--- a/web1/src/app/admin/company.component.html
+++ b/web1/src/app/admin/company.component.html
@@ -216,7 +216,7 @@
                                                 </mat-error>
                                             </mat-form-field>
                                         </div>
-                                        <div class="col-xl-2 col-lg-2 col-md-2 col-4 mb-0" >
+                                        <div class="col-xl-2 col-lg-2 col-md-2 col-4 mb-0" *ngIf="user.UserGroup == 'SuperAdmin'">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>CompanyStatus</mat-label>
                                                 <mat-select name="CompanyStatus" [(ngModel)]="data.CompanyStatus"  >
