--- a/sperated_db_api/views/invoice_Box.ejs
+++ b/sperated_db_api/views/invoice_Box.ejs
@@ -76,7 +76,15 @@
 .billTotalRow .col2 .ul1 li{
     border-right:  none !important;
 }
-
+.billofsupply {
+  border-collapse: collapse;
+  padding: 0;
+  margin: 0;
+}
+.billofsupply thead tr th{
+  border: 1px solid #000;
+  padding: 0 1%;
+}
 </style>
 
 <body>
@@ -195,7 +203,7 @@
                     </table>
                     <table class="tbl1">
                        <tr style="background-color: rgb(228, 228, 228);">
-                          <th colspan="5" >Right </th> 
+                          <th colspan="5" >RIGHT </th> 
                         </tr>
                        <tr>
                           <th style="border-left: none !important;">SPH</th>
@@ -222,7 +230,7 @@
               
                    <table class="tbl2">
                     <tr style="background-color: rgb(228, 228, 228);"> 
-                        <th colspan="5">Left </th> 
+                        <th colspan="5"> LEFT</th> 
                     </tr>
                     <tr>
                       <th>SPH</th>
@@ -434,7 +442,7 @@
                                        
                                                 <!-- serviceList end -->
                         </tbody>
-                    
+                        <% if ( data.bill==='Tax Invoice' ){%>
                         <tfoot>
                             <tr>
                                 <th></th>
@@ -460,6 +468,7 @@
                                 <th><%= data.billMaster.TotalAmount %></th>
                             </tr>
                         </tfoot>
+                        <%}%>
                 </table>
                 <%}%>
 
@@ -648,7 +657,7 @@
                                            
                                                     <!-- serviceList end -->
                             </tbody>
-                        
+                            <% if ( data.bill==='Tax Invoice' ){%>
                             <tfoot>
                                 <tr>
                                     <th></th>
@@ -674,6 +683,7 @@
                                     <th><%= data.subtotals %></th>
                                 </tr>
                             </tfoot>
+                            <%}%>
                     </table>
                     <%}%>
 
@@ -681,8 +691,8 @@
             <!-- Product list  end  -->
 
             <!-- improtant note billtotal start -->
-            <section>
-                <div class="billTotalRow" style="border: 1px solid; border-top: 0px solid !important; padding: 0px 5px; margin: 0; padding-top: 1%; position: relative; height: 150px !important;">
+            <section >
+                <div class="billTotalRow" style="border: 1px solid #000; border-top: 0px solid !important; padding: 0px 5px; margin: 0; padding-top: 1%; position: relative; ">
                     <% if (data.Signature != 'http://localhost:3000/null' && data.Signature != 'http://localhost:3000/undefined'){%>
                         <img src="<%= data.Signature %>" alt="Signature" style="width: 100px;position:absolute; left: 55%;top: 10%;">
                         <%}%>
@@ -703,6 +713,7 @@
                              <%}%>
                     </div>
                     <div class="col2">
+                        <% if ( data.bill==='Tax Invoice' ){%>
                         <table style="width: 100%;">
                             <thead>
                                 <tr style="height: 20px !important; font-size: 20px ;">
@@ -715,6 +726,58 @@
                                 </tr>
                             </thead>
                         </table>
+                        <%}%>
+                        <% if ( data.bill !== 'Tax Invoice' ){%>
+                        <table style="width: 100%;" class="billofsupply">
+                            <thead>
+                                <tr style="height: 20px !important; font-size: 20px ;">
+                                    <th style="text-align: left">Total</th>
+                                    <th style="text-align: right">  <%= data.subtotals %></th>
+                                </tr>
+                                <% if (data.shopdetails.Discounts==="true" && data.billMaster.DiscountAmount != 0){%>
+                                <tr style="height: 20px !important; font-size: 20px ;">
+                                    <th style="text-align: left">Discount</th>
+                                    <th style="text-align: right">  <%= data.billMaster.DiscountAmount %></th>
+                                </tr>
+                                <%}%>
+                                <% if (data.shopdetails.AdminDiscount==="true" && data.billMaster.AddlDiscount != 0){%>
+                                <tr style="height: 20px !important; font-size: 20px ;">
+                                    <th style="text-align: left">A Discount</th>
+                                    <th style="text-align: right">  <%= data.billMaster.AddlDiscount %></th>
+                                </tr>
+                                <%}%>
+                                <tr style="height: 20px !important; font-size: 20px ;">
+                                    <th style="text-align: left"> Grand Total</th>
+                                    <th style="text-align: right">  <%= data.billMaster.TotalAmount %></th>
+                                </tr>
+                                <tr style="height: 20px !important; font-size: 20px ;">
+                                    <th style="text-align: left"> Advance</th>
+                                    <th style="text-align: right">  <%= data.recivePayment.toFixed(2) %></th>
+                                </tr>
+                                <tr style="height: 20px !important; font-size: 20px ;">
+                                    <th style="text-align: left">Balance</th>
+                                    <th style="text-align: right">  <%= data.CurrentInvoiceBalance %></th>
+                                </tr>
+                               
+                            </thead>
+                        </table>
+                        <%}%>
+                        <% if (data.company.ID === 93 || data.company.ID === 195){%>
+                                   
+                            <div style="width: 100%;  margin-top: 20%;">
+                                <table style="width:70%; float:right">
+                                    <thead>
+                                        <tr>
+                                            <th
+                                            <% %>  style="font-size:<%= data.CustomerFont %> ; line-height:<%= data.CustomerLineSpace %>;border-top-style: dotted ;   border-top-color: <%= data.Color %>; padding: 0px; margin:0px "> Signature
+                                        </th>
+                                        </tr>
+                                    </thead>
+                                </table>
+                            </div>
+                                    
+                            
+                            <%}%>
                     </div>
                 </div>
             </section>
@@ -722,19 +785,7 @@
 
             <!-- You've Saved  start -->
           
-            <% if (data.company.ID === 93 || data.company.ID === 195){%>
-            <div style="width: 100%; height: 50px; margin-top: 10px;">
-                <table style="width:30%; float:right">
-                    <thead>
-                        <tr>
-                            <th
-                            <% %>  style="font-size:<%= data.CustomerFont %> ; line-height:<%= data.CustomerLineSpace %>;border-top-style: dotted ;   border-top-color: <%= data.Color %>; padding: 0px; margin:0px "> Signature
-                        </th>
-                        </tr>
-                    </thead>
-                </table>
-            </div>
-            <%}%>
+          
               <!-- You've Saved  end -->
             </section>
 </body>
