--- a/web1/src/app/inventory/physical-stock/physical-stock.component.html
+++ b/web1/src/app/inventory/physical-stock/physical-stock.component.html
@@ -131,12 +131,12 @@
                                         </mat-select>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xxl-3 col-xl-3 col-lg-5 col-md-6 col-12  mb-sm-0 ">
+                                <div class="col-xxl-1 col-xl-1 col-lg-1 col-md-6 col-12  mb-sm-0 ">
                                     <button type="button" mat-raised-button color="primary"
                                         (click)="getList()" [disabled]="searchButton == false">Search</button>
-                                    <button type="button" mat-raised-button color="warn" class="ms-3 me-3"
-                                        (click)="reset()">All Clear</button>
-
+                                </div>
+                                <div class="col-xxl-2 col-xl-1 col-lg-1 col-md-6 col-12  mb-sm-0 ">
+                                    <p style="color:red">Note: Please do not log out of the software. Your physical data may be lost. Please save the invoice before logging out.</p>
                                 </div>
                             </div>
                         </form>
@@ -243,11 +243,15 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xxl-4 col-xl-4 col-lg-5 col-md-6 col-12  mb-sm-0 ">
+                                <div class="col-xxl-4 col-xl-2 col-lg-5 col-md-6 col-12  mb-sm-0 ">
                                     <button type="submit" mat-raised-button color="primary" *ngIf="id == 0"
                                         [disabled]="!f2.valid">Save</button>
                                     <button type="button" mat-raised-button color="primary" *ngIf="id != 0"
                                         class="ms-3 me-3" (click)="update()">Update</button>
+                                </div>
+                                <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-6 col-12  mb-sm-0 ">
+                                <button type="button" mat-raised-button color="warn" class="ms-3 me-3"
+                                        (click)="reset()">All Clear</button>
                                 </div>
                             </div>
                         </form>
