--- a/web1/src/app/sale/bill-list/bill-list.component.html
+++ b/web1/src/app/sale/bill-list/bill-list.component.html
@@ -7,7 +7,7 @@
             <div class="header p-2 py-0 pt-1">
               <!-- Bill all Customer Wise-->
               <div *ngIf="this.id === '0'" class="row">
-                <div class="col-lg-1 col-md-2 col-10 " >
+                <div class="col-lg-1 col-md-2 col-10 ">
                   <h2>Bill Serach</h2>
                 </div>
                 <!-- <div class="ps-md-0 ps-1 pt-1" style="width: 40px;">
@@ -115,6 +115,7 @@
                           <th>RegNo.</th>
                           <th>Invoice#</th>
                           <th>InvoiceDate</th>
+                          <th>Order#</th>
                           <th>OrderDate</th>
                           <th>ProductStatus</th>
                           <th>DeliveryDate</th>
@@ -141,8 +142,8 @@
                             <button title="Messenger" class="bg-btn msg">
                               <i class="fab fa-facebook-messenger"></i>
                             </button>
-                            <button *ngIf="user.UserGroup != 'Employee'" title="Payment History" class="detail_icons bg-btn"
-                              (click)="openModal(content,Bdata)">
+                            <button *ngIf="user.UserGroup != 'Employee'" title="Payment History"
+                              class="detail_icons bg-btn" (click)="openModal(content,Bdata)">
                               <i class="fas fa-info-circle ms-1" data-mdb-toggle="modal"
                                 data-mdb-target="#exampleModal"> </i>
                             </button>
@@ -154,7 +155,7 @@
                               <mat-icon class="delete_icon ms-1">delete_forever</mat-icon>
                             </button>
 
-                            <button  title="Payment" class="bg-btn" (click)="openModal13(content1,Bdata)">
+                            <button title="Payment" class="bg-btn" (click)="openModal13(content1,Bdata)">
                               <mat-icon class="edit_icon ms-1">attach_money </mat-icon>
                             </button>
                             <div class="button-container" *ngIf="this.id != '0'">
@@ -268,12 +269,14 @@
                           </td>
                           <td [ngClass]="{'deleteClass': Bdata.Status === 0}" class="text-center ">
                             {{ dateFormat(Bdata.BillDate)}}</td>
+                          <td [ngClass]="{'deleteClass': Bdata.Status === 0}" class="text-center ">{{Bdata.OrderNo}}
+                          </td>
                           <td [ngClass]="{'deleteClass': Bdata.Status === 0}" class="text-center ">
                             {{ dateFormat(Bdata.OrderDate)}}</td>
                           <td [ngClass]="{'deleteClass': Bdata.Status === 0}" class="text-center ">{{Bdata.ProductStatus
                             }}</td>
                           <td [ngClass]="{'deleteClass': Bdata.Status === 0}" class="text-center ">
-                             {{dateFormat(Bdata.DeliveryDate)}}</td>
+                            {{dateFormat(Bdata.DeliveryDate)}}</td>
                           <td [ngClass]="{'deleteClass': Bdata.Status === 0}" class="text-center ">
                             {{Bdata.PaymentStatus}}</td>
                           <td [ngClass]="{'deleteClass': Bdata.Status === 0}" class="text-center ">{{Bdata.Quantity}}
