--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -20,11 +20,18 @@
     <div class="body">
         <form #f="ngForm" autocomplete="off">
             <div class="row " style="background:#d9d9d9;">
-                <div class="col-xl-1 col-lg-1 col-md-3 col-12 mb-0 pr-2 pr-md-0 pl-2 pl-md-0 ">
+                <div *ngIf="this.BillMaster.BillingFlow === 1" class="col-xl-1 col-lg-1 col-md-3 col-12 mb-0 pr-2 pr-md-0 pl-2 pl-md-0 ">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Invoice</mat-label>
                         <input matInput name="InvoiceNo" [(ngModel)]="BillMaster.InvoiceNo"
                             [disabled]="BillMaster.InvoiceNo" #InvoiceNoNocontrol autocomplete="false">
+                    </mat-form-field>
+                </div>
+                <div *ngIf="this.BillMaster.BillingFlow !== 1" class="col-xl-1 col-lg-1 col-md-3 col-12 mb-0 pr-2 pr-md-0 pl-2 pl-md-0 ">
+                    <mat-form-field class="example-full-width mb-0">
+                        <mat-label>OrderNo</mat-label>
+                        <input matInput name="OrderNo" [(ngModel)]="BillMaster.OrderNo"
+                            [disabled]="BillMaster.OrderNo" #OrderNoNocontrol autocomplete="false">
                     </mat-form-field>
                 </div>
                 <div *ngIf="this.BillMaster.BillingFlow === 1" class="col-xl-1 col-lg-1 col-md-3 col-6 mb-0">
