--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -34,14 +34,14 @@
                             [disabled]="BillMaster.OrderNo" #OrderNoNocontrol autocomplete="false">
                     </mat-form-field>
                 </div>
-                <div *ngIf="this.BillMaster.BillingFlow === 1" class="col-xl-1 col-lg-1 col-md-3 col-6 mb-0">
+                <div *ngIf="this.BillMaster.IsConvertInvoice === 1" class="col-xl-1 col-lg-1 col-md-3 col-6 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Date</mat-label>
                         <input matInput name="BillDate" type="date" [(ngModel)]="BillMaster.BillDate" 
                         [disabled]="!this.billDateDisabled" autocomplete="false">
                     </mat-form-field>
                 </div>
-                <div *ngIf="this.BillMaster.BillingFlow !== 1" class="col-xl-1 col-lg-1 col-md-3 col-6 mb-0">
+                <div *ngIf="this.BillMaster.IsConvertInvoice === 0" class="col-xl-1 col-lg-1 col-md-3 col-6 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>OrderDate</mat-label>
                         <input matInput name="OrderDate" type="date" [(ngModel)]="BillMaster.OrderDate" 
