--- a/web1/src/app/common/login.component.html
+++ b/web1/src/app/common/login.component.html
@@ -1,5 +1,6 @@
 
 <div class="container-fluid bb p-5 ">
+  <div class="img-bgm"></div>
   <!-- <audio controls autoplay style="display: none;">
     <source src="../../assets/images/ram.mp3" type="audio/ogg" auto>
   </audio> -->
@@ -8,7 +9,7 @@
       <div class="row mt-5 mt-sm-0">
         <div class="col-xxl-4  col-xl-4 col-lg-6 col-md-8 col-12 mt-5 mx-auto">
           <div class="card">
-            <form #f="ngForm" (ngSubmit)="onSubmit(content)" class="box" autocomplete="off">
+            <form #f="ngForm" (ngSubmit)="onSubmit(content)" class="box mx-auto" autocomplete="off">
               <div class="row">
                 <div class="col-md-5 col-sm-4 col-7 mx-auto text-center">
                   <h1 class="log_name">Login</h1>
