--- a/web1/src/app/report/customer-return/customer-return.component.html
+++ b/web1/src/app/report/customer-return/customer-return.component.html
@@ -23,6 +23,7 @@
                                                     <mat-label>Filter Types</mat-label>
                                                     <mat-select name="FilterTypes" [(ngModel)]="BillMaster.FilterTypes">
                                                         <mat-option value="BillDate">BillDate</mat-option>
+                                                        <mat-option value="OrderDate">OrderDate</mat-option>
                                                     </mat-select>
                                                 </mat-form-field>
                                             </div>
@@ -188,6 +189,7 @@
                                                     <mat-label>Filter Types</mat-label>
                                                     <mat-select name="FilterTypes" [(ngModel)]="Billdetail.FilterTypes">
                                                         <mat-option value="BillDate">BillDate</mat-option>
+                                                        <mat-option value="OrderDate">OrderDate</mat-option>
                                                         <mat-option value="DeliveryDate">DeliveryDate</mat-option>
                                                     </mat-select>
                                                 </mat-form-field>
