--- a/web1/src/app/admin/login-history/login-history.component.html
+++ b/web1/src/app/admin/login-history/login-history.component.html
@@ -17,7 +17,7 @@
                             <mat-tab label="Login List">
                                 <div class="p-3">
                                     <div class="row">
-                                        <div class="col-md-2 col-3   order-3 order-md-1">
+                                        <div class="col-md-2 col-12   order-3 order-md-1">
                                             <select class="form-control" id="itemsPerPage" name="itemsPerPage"
                                                 style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
                                                 [(ngModel)]="itemsPerPage" (change)="getList();">
@@ -29,7 +29,7 @@
                                                 <option [ngValue]="500">Show 500 Row</option>
                                             </select>
                                         </div>
-                                        <div class="col-md-3 col-9 mx-md-auto order-2 order-md-1"
+                                        <div class="col-md-3 col-12 mx-md-auto order-2 order-md-1 mt-3 mt-md-0"
                                             style="margin-top:0px;">
                                             <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false"
                                                 ngbPaginationEllipsis [collectionSize]="collectionSize" #numPages
@@ -38,7 +38,7 @@
                                                 [ellipses]="false" [boundaryLinks]="true">
                                             </ngb-pagination>
                                         </div>
-                                        <div class="col-md-2 col-4 ms-auto  order-0 order-md-1">
+                                        <div class="col-md-2 col-12 ms-auto  order-0 order-md-1">
                                             <div class="input-group">
                                                 <input placeholder="Search" [(ngModel)]="term" #searching mdbInput
                                                     type="search" id="form1" class="form-control" />
@@ -68,8 +68,7 @@
                                                         <td class="text-left">{{data.UserName}}</td>
                                                         <td class="text-left">{{data.CompanyName}}</td>
                                                         <td class="text-left">{{data.IpAddress}}</td>
-                                                        <td class="text-left">{{data.LoginTime | date: 'dd-MM-yyyy hh:mm
-                                                            a'}}</td>
+                                                        <td class="text-left">{{data.LoginTime | date: 'dd-MM-yyyy hh:mm a'}}</td>
                                                         <td class="text-left">{{data.Comment }}</td>
                                                     </tr>
                                                 </tbody>
@@ -118,7 +117,7 @@
 
                                                 </mat-form-field>
                                             </div>
-                                            <div class="col-xl-2 col-lg-2 col-md-2 col-4 mb-0">
+                                            <div class="col-md-2 ">
                                                 <mat-form-field class="example-full-width mb-0">
                                                     <mat-label>CompanyStatus</mat-label>
                                                     <mat-select name="CompanyStatus" [(ngModel)]="filter.CompanyStatus">
@@ -138,7 +137,11 @@
                                                 <button type="submit" mat-raised-button color="primary"> Search</button>
                                                 <button type="button" class="me-3 ms-3" mat-raised-button color="warn"
                                                     (click)="FromReset()"> Reset</button>
-
+                                                    <button type="button"  mat-raised-button style="background-color: green; color:#fff"
+                                                    (click)="exportAsXLSX('ActiveCount')"> Excel</button>
+                                            </div>
+                                            <div class="col-md-2 col-md-2 mt-3 mt-md-1" style="color:red; text-align: right;">
+                                                <b >ActiveCount:- {{this.ActiveCount}}</b>
                                             </div>
                                         </div>
                                     </form>
@@ -219,7 +222,7 @@
 
                                                 </mat-form-field>
                                             </div>
-                                            <div class="col-xl-2 col-lg-2 col-md-2 col-4 mb-0">
+                                            <div class="col-md-2">
                                                 <mat-form-field class="example-full-width mb-0">
                                                     <mat-label>CompanyStatus</mat-label>
                                                     <mat-select name="CompanyStatus" [(ngModel)]="filter.CompanyStatus">
@@ -239,7 +242,11 @@
                                                 <button type="submit" mat-raised-button color="primary"> Search</button>
                                                 <button type="button" class="me-3 ms-3" mat-raised-button color="warn"
                                                     (click)="FromReset()"> Reset</button>
-
+                                                    <button type="button"  mat-raised-button style="background-color: green; color:#fff"
+                                                    (click)="exportAsXLSX('NonActiveCount')"> Excel</button>
+                                            </div>
+                                            <div class="col-md-2 mt-3 mt-md-1" style="color:red; text-align: right;">
+                                                <b >NonActiveCount:- {{this.NonActiveCount}}</b>
                                             </div>
                                         </div>
                                     </form>
