--- a/web1/src/app/report/sale-report/sale-report.component.html
+++ b/web1/src/app/report/sale-report/sale-report.component.html
@@ -22,6 +22,7 @@
                                                     <mat-label>Filter Types</mat-label>
                                                     <mat-select name="FilterTypes" [(ngModel)]="BillMaster.FilterTypes">
                                                         <mat-option value="BillDate">BillDate</mat-option>
+                                                        <mat-option value="OrderDate">OrderDate</mat-option>
                                                         <mat-option value="DeliveryDate">DeliveryDate</mat-option>
                                                     </mat-select>
                                                 </mat-form-field>
@@ -540,6 +541,7 @@
                                                     <mat-label>Filter Types</mat-label>
                                                     <mat-select name="FilterTypes" [(ngModel)]="Billdetail.FilterTypes">
                                                         <mat-option value="BillDate">BillDate</mat-option>
+                                                        <mat-option value="OrderDate">OrderDate</mat-option>
                                                         <mat-option value="DeliveryDate">DeliveryDate</mat-option>
                                                     </mat-select>
                                                 </mat-form-field>
@@ -1509,6 +1511,7 @@
                                                     <mat-label>Filter Types</mat-label>
                                                     <mat-select name="FilterTypes" [(ngModel)]="pending.FilterTypes">
                                                         <mat-option value="BillDate">BillDate</mat-option>
+                                                        <mat-option value="OrderDate">OrderDate</mat-option>
                                                         <mat-option value="DeliveryDate">DeliveryDate</mat-option>
                                                     </mat-select>
                                                 </mat-form-field>
